<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task">ADD TASK</string>
    <string name="my_tasks">My Tasks</string>

    <string name="task_description">Task description</string>

    <string name="task_title">Task title</string>
    <string name="do_something">Do Something</string>
    <string name="my_title">My Title</string>
    <string name="total_tasks_0">Total Tasks : </string>
    <string name="all_tasks_1">All Tasks</string>
    <string name="total_tasks">Total Tasks :</string>
<!--    <string name="name">User Name</string>-->
    <string name="save">Save</string>
    <string name="username">username</string>
    <string name="textview">TextView</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="settings">Settings</string>
    <string name="user_name_tasks">User Name Tasks</string>
    <string name="task">Task</string>
    <string name="userEmail">UserName</string>
    <string name="useremail">userEmail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="insert_the_confirmation_number">Insert The Confirmation Number</string>
    <string name="confirme">confirme</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="name">User Name</string>
    <string name="email">Email</string>
<!--    <string name="password">Password</string>-->
    <string name="confirme_number">confirme Number</string>
    <string name="you_will_receive_an_email_contains_the_confirming_number_withen_check_your_email">You Will receive An Email Contains The Confirming Number Withen , Check Your Email</string>
    <string name="your_password">Your_password</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="welcome_to_taskmaneger">Welcome To TaskManeger</string>
    <string name="url_text">URL text</string>
    <string name="channel_name">TaskMaster</string>
    <string name="channel_description">Notifications For New Task</string>
    <string name="send_your_location">Send Your Location</string>
    <string name="choose_file">Choose File</string>
    <!--    <string name="textview">TextView</string>-->

    <string-array name="teams_Names">
        <item>Team A</item>
        <item>Team B</item>
        <item>Team C</item>
    </string-array>

    <string-array name="status">
        <item>NEW</item>
        <item>ASSIGNED</item>
        <item>IN_PROGRESS</item>
        <item>COMPLETE</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

</resources>